// Version
syntax = "proto3";

// Package name
option go_package = "github.com/bonxatiwat/bonx-shop-tutorial";

// Structores
message CredentialSearchReq {
  string accessToken = 1;
}

message CredentialSearchRes {
  bool isVaild = 1;
}

message RolesCountReq {}

message RolesCountRes {
  int64 count = 1;
}

// Methods
service AuthGrpcService {
  rpc CredentialSearch(CredentialSearchReq) returns (CredentialSearchRes);
  rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}